# tauri-demo

./: .gitignore  index.html  package.json
.github/workflows/: release.yml
core/common/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: file_api.rs
src-tauri/src/http/: http_server.rs
src-tauri/src/routers/: file_api.rs  mod.rs
src-tauri/src/service/: ipc.rs
src/components/: HelloWorld.vue
